--- a/article.html
+++ b/article.html
@@ -13,7 +13,7 @@
   <div class="wrapper">
     <header class="header">
       <div class="header__container">
-        <a href="#" class="header__logo">
+        <a href="index.html" class="header__logo">
           <h1>Blog</h1>
         </a>
         <nav class="header__menu menu">
